# parqit

./: .clangd  .gitignore  ASSUMPTIONS.md  AUDITORIA_ADVERSARIAL_FIABILIDADE_DADOS_PARQIT_2026-07-14.md  BUILDING.md  CHANGELOG.md  CHATGPT_AUDIT_PROMPT.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  PARQIT_AUDIT_REMEDIATION_2026-07-14.md  PARQIT_AUDIT_REPORT.md  PARQIT_CODEX_HOLISTIC_AUDIT_2026-07-09.md  PARQIT_PERFORMANCE_AUDIT_claude.md  README.md  codex_audit_prompt.md  parqit_adversarial_audit.md  parqit_build_prompt.md  parqit_clean_demo.do
.github/workflows/: build.yml
audit_repro/: repro_duplicates_missing_key_normalization.do  repro_fractional_temporal_save_divergence.do  repro_gsort_missing_order.do  repro_merge_mm_physical_order.do  repro_misstable_n_complete.do  repro_open_data_named_view_overwrite.do  repro_regexm_null_pattern.do  repro_reshape_long_duplicate_i.do  repro_reshape_missing_key_normalization.do  repro_runner_no_match.sh  repro_runner_pass_then_abort.sh  repro_stats_missing_semantics.do  repro_t02_fixture_leak.sh  repro_unit_temp_collision.sh
benchmarks/: README.md  benchmark_big_read_pq_parqit_use.do  benchmark_feature_surface.py  benchmark_parqit_pq_python_canonical.do  benchmark_parqit_pq_python_canonical.py  benchmark_synthetic_features.do  compare_parqit_vs_pq.do  make_synthetic_data.py  probe_collect_vs_use.do  profile_collect.do  profile_parqit.ado  profile_run.do  replicate_tests_stepwise.do  test_frame_rename.do
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/: REPORT.md  issue_matrix.csv  performance_p50.csv  precision_summary.csv
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/common_benchmark_small/: REPORT.md  benchmark_raw.csv  benchmark_summary.csv  python_raw.csv  stata_raw.csv  stata_summary.csv  validation.csv  validation_summary.csv
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/feature_surface/: REPORT.md  feature_failures_wide.csv  feature_p50_wide.csv  feature_python_raw.csv  feature_raw.csv  feature_stata_raw.csv  feature_stata_summary.csv  feature_summary_long.csv
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/parqit_stata_logs/: VERDICTS_SUMMARY.txt
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/pq_verify_suite/: VERDICTS_SUMMARY.txt
benchmarks/_out/pq_parqit_issue_benchmark_20260615_102908/provenance/: hashes_and_context.txt
docs/audits/: AUDITORIA_ADVERSARIAL_HOLISTICA_PARQIT_2026-07-03.md  CERTIFICACAO_GO_GO_FIABILIDADE_DADOS_PARQIT_2026-07-14.md  PARITY_parqit_vs_pq_claude.md  PARQIT_ADVERSARIAL_AUDIT_2026-06-14_f386b5b.md  PARQIT_ADVERSARIAL_AUDIT_2026-06-16.md  PARQIT_ADVERSARIAL_AUDIT_2026-06-23_CODEX.md  PARQIT_ADVERSARIAL_AUDIT_FOR_CLAUDE_20260614.md  PARQIT_ADVERSARIAL_AUDIT_FOR_CODEX_20260614.md  PARQIT_CODEX_HOLISTIC_AUDIT_2026-07-09.md  PARQIT_PERFORMANCE_AUDIT_claude.md  PROMPT_AUDITORIA_ADVERSARIAL_FIABILIDADE_DADOS_PARQIT_2026-07-14.md  README.md  RELATORIO_parqit_vs_pq_2026-06-15.md
docs/audits/verifications/parqit_audit_package/audit/: parqit_audit_report.md
docs/audits/verifications/parqit_audit_package/repro/: verify_mata_primitives.do
docs/audits/verifications/parqit_audit_package/tests/: run_all_parqit_tests.do
examples/: make_data.py  parqit_basics.do  parqit_tour.do  pq_to_parqit_common_workflows.do
src/ado/p/: parqit.ado  parqit.pkg  parqit.sthlp  parqit_combine.dlg  parqit_explore.dlg  parqit_filter.dlg  parqit_gen.dlg  parqit_pivot.dlg  parqit_read.dlg  parqit_stats.dlg  parqit_vars.dlg  parqit_views.dlg  parqit_write.dlg  stata.toc
src/engine/: exprtrans.cpp  exprtrans.hpp  hexcodec.cpp  hexcodec.hpp  request.cpp  request.hpp  sanitize.cpp  sanitize.hpp  session.cpp  session.hpp  typemap.cpp  typemap.hpp  view.cpp  view.hpp
src/plugin/: parqit_plugin.cpp  plugin.def  plugin.map  plugin_io.cpp  plugin_io.hpp  plugin_view.cpp  plugin_view.hpp
tests/: release_lint.sh  run_stata.sh  test_run_stata_no_match.sh  test_unit_concurrent.sh  verify_collected_plugin.sh
tests/concurrent/: x01_bridge_session_a.do  x01_bridge_session_b.do  x01_bridge_xproc.sh  x02_output_session_a.do  x02_output_session_b.do  x02_output_xproc.sh
tests/fixtures/: far_dates.parquet
tests/integration/: m0_smoke.do  t02_use_options.do  t03_verbs_pipeline.do  t04_two_table.do  t05_power.do  t06_named_views.do  t07_view_using.do  t08_explore.do  t09_explore2.do  t10_audit_fixes.do  t11_save_fast_path.do  t12_pivot.do  t13_tour.do  t14_basics.do
tests/roundtrip/: t01_basic_roundtrip.do
tests/unit/: test_arrow_copy_bench.cpp  test_exprtrans.cpp  test_hexcodec.cpp  test_request.cpp  test_sanitize.cpp  test_session.cpp  test_tmp.hpp  test_typemap.cpp  test_view.cpp
tests/verify_suite/: v02_renamed_columns.do  v03_period_dates.do  v05_hhmm_datetime.do  v06_uint32_overflow.do  v07_label_fidelity.do  v08_save_errors_loud.do  v09_atomic_clear.do  v10_duplicate_columns.do  v11_unsupported_types.do  v12_internal_names.do  v13_in_ranges.do  v14_join_missing_keys.do  v15_float_extremes.do  v16_injection_hostile.do  v17_locale_dp_comma.do  v18_wide_2500_vars.do  v19_strl_boundary.do  v20_parallel_fill.do  v21_collect_passthrough_sizing.do  v22_collect_date_no_overflow.do  v23_relaxed_union_by_name.do  v24_multiformat_sources.do  v25_mergein_appendin.do  v26_perf_tips.do  v27_audit_fixes.do  v28_audit_fixes_20260614.do  v29_atom2_view_notes.do  v30_residual_fixes_20260614.do  v31_query_string_substr_parity.do  v32_invalid_utf8_save.do  v33_audit_fixes_20260623.do  v34_reshape_leading_zero_suffix.do  v35_audit_fixes_20260623b.do  v36_audit_fixes_20260623c.do  v37_audit_fixes_20260623d.do  v38_xtool_fidelity.do  v39_char_projection.do  v40_set_tempdir_paths.do  v41_type_fidelity.do  v42_expr_semantics.do  (+18 more)
verifications/parqit_audit_package/: README_REPRO.md
verifications/parqit_audit_package/audit/: RELATORIO_PARA_CLAUDE_CORRIGIR_PARQIT.md
verifications/parqit_audit_package/repro/: repro_char_projection.do
verifications/parqit_audit_package/tests/: run_all_parqit_tests.do
